relax constraint a bit

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
 
     "require": {
-        "psr/log": "^3.0.0"
+        "psr/log": "^1.0|^2.0|^3.0"
     },
 
     "require-dev": {
